--- a/src/pages/UI-kit/cards/cards.pug
+++ b/src/pages/UI-kit/cards/cards.pug
@@ -13,7 +13,6 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    <link rel="icon" type="image/png" sizes="16x16" href="../../../favicon/favicon-16x16.png">
 
     title Cards
   body
@@ -36,7 +35,7 @@ html(lang="ru")
           .cards__calendar
             .datepicker-here
           .cards__room-card
-            +room-card({image: "../../../components/room-card/image/room1.jpg", number: "888", isLux: true, costForDay: "9 990", activeStars: 5, numOfComments: "145"})
+            +room-card({image: "room1.jpg", number: "888", isLux: true, costForDay: "9 990", activeStars: 5, numOfComments: "145"})
           .cards__room-card
-            +room-card({image: "../../../components/room-card/image/room2.jpg", number: "840", costForDay: "9 990", activeStars: 4, numOfComments: "65"})
+            +room-card({image: "room2.jpg", number: "840", costForDay: "9 990", activeStars: 4, numOfComments: "65"})
 
