--- a/src/pages/websitePages/landing-page/landing-page.scss
+++ b/src/pages/websitePages/landing-page/landing-page.scss
@@ -1,5 +1,5 @@
 @import '../../../scss/fonts.scss';
-@import '../../../scss/colors.scss';
+@import '../../../scss/variables.scss';
 @import '../../../components/header/header.scss';
 @import '../../../components/footer/footer.scss';
 @import '../../../components/search-room-card/search-room-card.scss';
