--- a/src/pages/websitePages/registration/registration.scss
+++ b/src/pages/websitePages/registration/registration.scss
@@ -1,5 +1,5 @@
 @import '../../../scss/fonts.scss';
-@import '../../../scss/colors.scss';
+@import '../../../scss/variables.scss';
 @import '../../../components/header/header.scss';
 @import '../../../components/footer/footer.scss';
 @import '../../../components/sign-up-card/sign-up-card.scss';
@@ -14,6 +14,7 @@ body {
 }
 
 .registration {
+  background: red;
   &__image {
     padding: 30px 0 26px 0;
     background: url(./img/registration.jpg) no-repeat;
