--- a/src/pages/websitePages/room-details/room-details.scss
+++ b/src/pages/websitePages/room-details/room-details.scss
@@ -1,5 +1,5 @@
 @import '../../../scss/fonts.scss';
-@import '../../../scss/colors.scss';
+@import '../../../scss/variables.scss';
 @import '../../../components/header/header.scss';
 @import '../../../components/footer/footer.scss';
 @import '../../../components/abouts-room/abouts-room.scss';
