--- a/src/pages/websitePages/sign-in/sign-in.scss
+++ b/src/pages/websitePages/sign-in/sign-in.scss
@@ -1,5 +1,5 @@
 @import '../../../scss/fonts.scss';
-@import '../../../scss/colors.scss';
+@import '../../../scss/variables.scss';
 @import '../../../components/header/header.scss';
 @import '../../../components/footer/footer.scss';
 @import '../../../components/sign-in-card/sign-in-card.scss';
