--- a/src/pages/websitePages/room-details/room-details.pug
+++ b/src/pages/websitePages/room-details/room-details.pug
@@ -18,7 +18,7 @@ html(lang="ru")
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    title Registration
+    title Room details
   body
     .room-details
       header.room-details__header
