--- a/src/components/submit-button/submit-button.scss
+++ b/src/components/submit-button/submit-button.scss
@@ -15,9 +15,9 @@
     border: none;
     outline: none;
     cursor: pointer;
-    &:disabled {
-      cursor: auto;
-      opacity: 0.5;
+    transition: all 0.4s;
+    &:hover {
+      opacity: 0.6;
     }
   }
   &__arrow {
