--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -92,11 +92,11 @@ html(lang="ru")
           .form-elements__button.form-elements__button_purple
             +button({color: "purple", place: "inForm", text: "click me"})
           .form-elements__button.form-elements__button_purple
-            +button({color: "purple", place: "inForm", text: "click me", isDisabled: true})
+            +button({color: "purple", place: "inForm", text: "click me"})
           .form-elements__button.form-elements__button_white
             +button({color: "white", place: "inForm", text: "click me"})
           .form-elements__button.form-elements__button_white-margin
-            +button({color: "white", place: "inForm", text: "click me", isDisabled: true})
+            +button({color: "white", place: "inForm", text: "click me"})
           .form-elements__button-text.form-elements__button-text_purple click me 
           .form-elements__button-text.form-elements__button-text_black click me
           .form-elements__submit-button
