--- a/src/pages/UI-kit/cards/cards.pug
+++ b/src/pages/UI-kit/cards/cards.pug
@@ -35,7 +35,7 @@ html(lang="ru")
           .cards__calendar
             .datepicker-here
           .cards__room-card
-            +room-card({image: "room1.jpg", number: "888", isLux: true, costForDay: "9 990", activeStars: 5, numOfComments: "145"})
+            +room-card({images: ["room1.jpg", "room2.jpg", "room3.jpg", "room4.jpg"], number: "888", isLux: true, costForDay: "9 990", activeStars: 5, numOfComments: "145"})
           .cards__room-card
-            +room-card({image: "room2.jpg", number: "840", costForDay: "9 990", activeStars: 4, numOfComments: "65"})
+            +room-card({images: ["room2.jpg", "room3.jpg", "room4.jpg", "room5.jpg"], number: "840", costForDay: "9 990", activeStars: 4, numOfComments: "65"})
 
