--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -6,10 +6,22 @@
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 4px;
   overflow: hidden;
-  &__image {
+  transition: all 0.4s;
+  &:hover {
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.4);
+  }
+  &__preview {
     position: relative;
+    &:hover .room-card__arrow {
+      opacity: 1;
+    }
+  }
+  &__gallery {
+    display: flex;
+    transition: all 0.4s;
   }
   &__arrow {
+    opacity: 0;
     font-family: $material-icons;
     color: #fff;
     font-size: 24px;
@@ -23,6 +35,7 @@
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 99.99%, rgba(255, 255, 255, 0) 100%);
     cursor: pointer;
     user-select: none;
+    transition: all 0.4s;
   }
   &__right-arrow {
     left: auto;
@@ -36,9 +49,9 @@
   }
   &__circle {
     display: inline-block;
-    width: 7.5px;
-    height: 7.5px;
-    margin-right: 3.75px;
+    width: 8px;
+    height: 8px;
+    margin-right: 3px;
     border: 1px solid #fff;
     border-radius: 50%;
     box-sizing: border-box;
