--- a/src/components/submit-button/submit-button.scss
+++ b/src/components/submit-button/submit-button.scss
@@ -15,7 +15,7 @@
     border: none;
     outline: none;
     cursor: pointer;
-    transition: all 0.4s;
+    transition: opacity 0.4s;
     &:hover {
       opacity: 0.6;
     }
