--- a/src/components/expandable-checkbox/expandable-checkbox.scss
+++ b/src/components/expandable-checkbox/expandable-checkbox.scss
@@ -23,7 +23,7 @@
     line-height: 2.75rem;
     color: $color-main-50;
     text-align: center;
-    transition-duration: 0.5s;
+    transition: transform 0.5s;
     &_expanded {
       transform: rotate(180deg);
     }
