Added hide dropdown on button apply click

--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -27,6 +27,6 @@ mixin dropdown({title, elements, buttons, resultDefault, keyWords= null, isExpan
           .dropdown__count.js-dropdown__count(data-min= min, data-max= max)= value
           button.dropdown__plus.dropdown__button.js-dropdown__plus(type="button") +
       if(buttons)
-        .dropdown__bottom-buttons
+        .dropdown__bottom-buttons.js-dropdown__bottom-buttons
           button.dropdown__clear.dropdown__bottom-button.js-dropdown__clear(type="button") очистить
           button.dropdown__apply.dropdown__bottom-button.js-dropdown__apply(type="button") применить
