--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -28,7 +28,7 @@ mixin header({navbar, userName, butLogin, butRegister})
         else
           .header__buttons.js-header__buttons
             .header__button-login.header__button
-              +button({place: "inHeader", color: "white", text: butLogin})
+              +button({place: "in-header", color: "white", text: butLogin})
             .header__button-register.header__button
-              +button({place: "inHeader", color: "purple", text: butRegister})
+              +button({place: "in-header", color: "purple", text: butRegister})
         .header__burger.js-header__burger dehaze
