--- a/src/components/sign-up-card/sign-up-card.pug
+++ b/src/components/sign-up-card/sign-up-card.pug
@@ -29,4 +29,4 @@ mixin sign-up-card()
         .sign-up-card__sign-in
           .sign-up-card__sign-in-text Уже есть аккаунт на Toxin 
           .sign-up-card__sign-in-button 
-          +button({color: "white", place: "inForm", text: "Войти"})
+          +button({color: "white", place: "in-form", text: "Войти"})
