--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -90,13 +90,13 @@ html(lang="ru")
             +range-slider({title: "range slider"})
           .form-elements__buttons-text.form-elements__text buttons
           .form-elements__button.form-elements__button_purple
-            +button({color: "purple", place: "inForm", text: "click me"})
+            +button({color: "purple", place: "in-form", text: "click me"})
           .form-elements__button.form-elements__button_purple
-            +button({color: "purple", place: "inForm", text: "click me"})
+            +button({color: "purple", place: "in-form", text: "click me"})
           .form-elements__button.form-elements__button_white
-            +button({color: "white", place: "inForm", text: "click me"})
+            +button({color: "white", place: "in-form", text: "click me"})
           .form-elements__button.form-elements__button_white-margin
-            +button({color: "white", place: "inForm", text: "click me"})
+            +button({color: "white", place: "in-form", text: "click me"})
           .form-elements__button-text.form-elements__button-text_purple click me 
           .form-elements__button-text.form-elements__button-text_black click me
           .form-elements__submit-button
