--- a/src/components/block-color/block-color.pug
+++ b/src/components/block-color/block-color.pug
@@ -1,7 +1,7 @@
 mixin block-color({color, name, rgb})
 
   .block-color
-    .block-color__color(class="block-color__color-" + color)
+    .block-color__color-box(class="block-color__color-box_" + color)
     .block-color__description
       p.block-color__name(class="block-color__text")= name
       p.block-color__rgb(class="block-color__text")= rgb
