--- a/src/components/block-color/block-color.scss
+++ b/src/components/block-color/block-color.scss
@@ -2,36 +2,36 @@
   display: flex;
   font-size: 1.1875rem;
   line-height: 1.8125rem;
-  &__color {
+  &__color-box {
     width: 4.375rem;
     height: 4.375rem;
     border-radius: 6px;
 
-    &-dark_shade-100 {
+    &_dark-shade-100 {
       background-color: $color-main-100;
     }
 
-    &-dark_shade-75 {
+    &_dark-shade-75 {
       background-color: $color-main-75;
     }
 
-    &-dark_shade-50 {
+    &_dark-shade-50 {
       background-color: $color-main-50;
     }
 
-    &-dark_shade-25 {
+    &_dark-shade-25 {
       background-color: $color-main-25;
     }
 
-    &-dark_shade-05 {
+    &_dark-shade-05 {
       background-color: $color-main-05;
     }
 
-    &-purple {
+    &_purple {
       background-color: $color-secondary;
     }
 
-    &-green {
+    &_green {
       background-color: $color-tertiary;
     }
   }
