--- a/src/components/type/type.scss
+++ b/src/components/type/type.scss
@@ -1,49 +1,53 @@
 .type {
   display: flex;
-  &__span {
+  &__name {
     min-width: 37px;
     text-align: right;
     color: $color-main-25;
     font-weight: normal;
-    &_H1 {
-      font-size: 1.5rem;
-    }
-    &_H2 {
-      font-size: 1.1875rem;
-    }
-    &_H3 {
-      font-size: 0.75rem;
-    }
-    &_body {
-      font-size: 0.875rem;
+    &_font {
+      &_H1 {
+        font-size: 1.5rem;
+      }
+      &_H2 {
+        font-size: 1.1875rem;
+      }
+      &_H3 {
+        font-size: 0.75rem;
+      }
+      &_body {
+        font-size: 0.875rem;
+      }
     }
   }
   &__text {
     margin: 0;
     margin-left: 30px;
-    &_H1 {
-      font-size: 1.5rem;
-      font-family: $font-secondary;
-      font-weight: bold;
-      color: $color-main-100;
-    }
-    &_H2 {
-      font-size: 1.1875rem;
-      font-family: $font-secondary;
-      font-weight: bold;
-      color: $color-main-100;
-    }
-    &_H3 {
-      font-size: 0.75rem;
-      font-weight: bold;
-      text-transform: uppercase;
-      color: $color-main-100;
-    }
-    &_body {
-      font-size: 0.875rem;
-      font-weight: normal;
-      color: $color-main-75;
-      line-height: 24px;
+    &_font {
+      &_H1 {
+        font-size: 1.5rem;
+        font-family: $font-secondary;
+        font-weight: bold;
+        color: $color-main-100;
+      }
+      &_H2 {
+        font-size: 1.1875rem;
+        font-family: $font-secondary;
+        font-weight: bold;
+        color: $color-main-100;
+      }
+      &_H3 {
+        font-size: 0.75rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: $color-main-100;
+      }
+      &_body {
+        font-size: 0.875rem;
+        font-weight: normal;
+        color: $color-main-75;
+        line-height: 24px;
+      }
     }
   }
 }
