--- a/src/pug/variables.pug
+++ b/src/pug/variables.pug
@@ -1,7 +1,7 @@
 -
-  const blocksColor = [{color: "dark_shade-100", name: "Dark Shade 100%", rgb: "#1F2041"},{color: "dark_shade-75", name: "Dark Shade 75%", rgb: "#1F2041"},
-                      {color: "dark_shade-50", name: "Dark Shade 50%", rgb: "#1F2041"},{color: "dark_shade-25", name: "Dark Shade 25%", rgb: "#1F2041"},
-                      {color: "dark_shade-05", name: "Dark Shade 5%", rgb: "#1F2041"},{color: "purple", name: "Purple", rgb: "#BC9CFF"},
+  const blocksColor = [{color: "dark-shade-100", name: "Dark Shade 100%", rgb: "#1F2041"},{color: "dark-shade-75", name: "Dark Shade 75%", rgb: "#1F2041"},
+                      {color: "dark-shade-50", name: "Dark Shade 50%", rgb: "#1F2041"},{color: "dark-shade-25", name: "Dark Shade 25%", rgb: "#1F2041"},
+                      {color: "dark-shade-05", name: "Dark Shade 5%", rgb: "#1F2041"},{color: "purple", name: "Purple", rgb: "#BC9CFF"},
                       {color: "green", name: "Green", rgb: "#6FCF97"}]
 
   const types = [{title: "H1", text: "This one is the sub-section or widget title"},{title: "H2", text: "Next one is the item title inside widgets"},
