Deleted unnecessary comments

--- a/src/components/abouts-room/abouts-room.pug
+++ b/src/components/abouts-room/abouts-room.pug
@@ -1,4 +1,4 @@
-//- Сюда передаётся массив[]
+//- Сюда передаётся массив [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"}, [{...}] ]
 mixin abouts-room({roomDetails})
 
   .abouts-room  
