--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -113,7 +113,7 @@
     }
   }
   &__minus {
-    margin-left: auto; // прижимает кнопки минус, плюс и счётчик вправо.
+    margin-left: auto;
     margin-right: 2rem;
   }
   &__count {
