--- a/src/components/radio-button/radio-button.pug
+++ b/src/components/radio-button/radio-button.pug
@@ -1,4 +1,4 @@
-//- radio-buttons - это массив [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
+//- radioButtons - это массив [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
 mixin radio-button({title, radioButtons})
 
   .radio_buttons
